SNiPhunter now using 15 October 2015 Pubmed corpus

--- a/SNiPhunter_Scripts.ipynb
+++ b/SNiPhunter_Scripts.ipynb
@@ -2,17 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "318714 7700\n"
+     ]
+    }
+   ],
    "source": [
     "#Extracting \"rs\" containing XML files from Pubmed OAI set.\n",
     "import os\n",
     "import sys\n",
     "import shutil\n",
-    "directory = \"/home/werner/Desktop/Source/articles.I-N/\" #example subset\n",
+    "directory = \"/home/werner/Desktop/Source/articles.O-Z/\" #example subset\n",
     "filelisting = os.walk(directory)\n",
     "totalFiles = 0\n",
     "rsFiles = 0\n",
@@ -40,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -88,6 +96,8 @@
     "            if node.text != None:\n",
     "                node = node.text.split()\n",
     "                for rsnumber in node:\n",
+    "                    if \"rs\" in rsnumber[1:3]:\n",
+    "                        rsnumber = rsnumber[1:] #include rs numbers starting with brackets\n",
     "                    if rsnumber.isalnum() and len(rsnumber) > 4 and len(rsnumber) < 15: #ensure that digits follow rs\n",
     "                        if rsnumber.startswith(\"rs\") and rsnumber[2].isdigit():\n",
     "                            while not rsnumber[-1].isdigit():\n",
@@ -109,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -142,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -152,7 +162,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "102150\n"
+      "111778\n"
      ]
     }
    ],
@@ -181,7 +191,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7713\n"
+      "8743\n"
      ]
     }
    ],
@@ -201,13 +211,14 @@
     "                    keywordList.append(keywords)\n",
     "    keywordList = set(keywordList)\n",
     "    keywordList = sorted(keywordList)\n",
-    "#print(len(json.dumps(keywordList)))\n",
+    "with open(\"/home/werner/Desktop/keywords.js\", \"w\") as data_file:\n",
+    "    data_file.write(json.dumps(keywordList))\n",
     "print(len(keywordList))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +227,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60595\n"
+      "69577\n"
      ]
     }
    ],
@@ -235,6 +246,15 @@
     "    data_file.write(json.dumps(keywordList))\n",
     "print(len(keywordList))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
