--- a/SNiPhunter_Scripts.ipynb
+++ b/SNiPhunter_Scripts.ipynb
@@ -18,9 +18,8 @@
    "source": [
     "#Extracting \"rs\" containing XML files from Pubmed OAI set.\n",
     "import os\n",
-    "import sys\n",
     "import shutil\n",
-    "directory = \"/home/werner/Desktop/Source/articles.O-Z/\" #example subset\n",
+    "directory = \"/home/werner/Desktop/Source/articles.O-Z/\" #example batch\n",
     "filelisting = os.walk(directory)\n",
     "totalFiles = 0\n",
     "rsFiles = 0\n",
@@ -36,7 +35,7 @@
     "            if breakTest == 1:\n",
     "                break\n",
     "            for word in line1:\n",
-    "                if (word.startswith('rs') or (not word[0].isalnum() and \"rs\" in word[1:3])): # search clause NEW CLAUSE ADDED\n",
+    "                if (word.startswith('rs') or (not word[0].isalnum() and \"rs\" in word[1:3])): # search clause\n",
     "                    shutil.copy(os.path.join(root,file), \"/home/werner/Desktop/Destination/\" + file)\n",
     "                    breakTest = 1\n",
     "                    rsFiles += 1\n",
