Comments on extraction script

--- a/SNiPhunter_Scripts.ipynb
+++ b/SNiPhunter_Scripts.ipynb
@@ -16,32 +16,34 @@
     }
    ],
    "source": [
-    "#Extracting \"rs\" containing XML files from Pubmed OAI set.\n",
+    "#Extracting \"rs\" containing XML files from Pubmed OAI set\n",
+    "#Copies files containing valid \"rs\" terms from source to destination directory\n",
+    "#Counters keep track of scanned vs copied files\n",
     "import os\n",
     "import shutil\n",
-    "directory = \"/home/werner/Desktop/Source/articles.O-Z/\" #example batch\n",
+    "directory = \"/home/werner/Desktop/Source/articles.O-Z/\" #source directory\n",
     "filelisting = os.walk(directory)\n",
-    "totalFiles = 0\n",
-    "rsFiles = 0\n",
+    "totalFiles = 0 #counter 1\n",
+    "rsFiles = 0 #counter 2\n",
     "for root, dirs, files in filelisting:   \n",
     "    for file in files:\n",
     "        totalFiles += 1\n",
     "        breakTest = 0\n",
-    "        fileone = open(root + \"/\" + file)\n",
+    "        fileOne = open(root + \"/\" + file)\n",
     "        if breakTest == 1:\n",
     "            break\n",
-    "        for line in fileone:\n",
+    "        for line in fileOne:\n",
     "            line1 = line.split()\n",
     "            if breakTest == 1:\n",
     "                break\n",
     "            for word in line1:\n",
     "                if (word.startswith('rs') or (not word[0].isalnum() and \"rs\" in word[1:3])): # search clause\n",
-    "                    shutil.copy(os.path.join(root,file), \"/home/werner/Desktop/Destination/\" + file)\n",
+    "                    shutil.copy(os.path.join(root,file), \"/home/werner/Desktop/Destination/\" + file) #destination directory\n",
     "                    breakTest = 1\n",
     "                    rsFiles += 1\n",
     "                if breakTest == 1:\n",
     "                    break\n",
-    "        fileone.close()\n",
+    "        fileOne.close()\n",
     "print (totalFiles, rsFiles)"
    ]
   },
