Additional scripting for extracting article titles

--- a/SNiPhunter_Scripts.ipynb
+++ b/SNiPhunter_Scripts.ipynb
@@ -78,13 +78,20 @@
     "                #if \"collection\" in collection.values():\n",
     "                if \"pub-type\" in collection.keys():\n",
     "                    year = subnode.text\n",
+    "        \n",
+    "        for node in tree.iter('title-group'):\n",
+    "            for subnode in node.iter('year'):\n",
+    "                collection = node.attrib\n",
+    "                #if \"collection\" in collection.values():\n",
+    "                if \"pub-type\" in collection.keys():\n",
+    "                    year = subnode.text       \n",
+    "        \n",
     "        for node in tree.iter('article-id'):\n",
     "            pmidat = node.attrib\n",
     "            if \"pmc\" in pmidat.values():\n",
     "                pmid = node.text\n",
     "            if \"doi\" in pmidat.values():\n",
-    "                doi = node.text\n",
-    "        \n",
+    "                doi = node.text        \n",
     "        for node in tree.iter('kwd'):  \n",
     "            kwd = node.text\n",
     "            if kwd != None:\n",
@@ -247,6 +254,96 @@
     "with open(\"/home/werner/Desktop/rsnumbers.js\", \"w\") as data_file: \n",
     "    data_file.write(json.dumps(keywordList))\n",
     "print(len(keywordList))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Create flat file database\n",
+    "import xml.etree.ElementTree as ET\n",
+    "import os\n",
+    "import json\n",
+    "directory = \"/home/werner/Desktop/TestArticles/\"\n",
+    "filelisting = os.walk(directory)\n",
+    "rslist =[]\n",
+    "for root, dirs, files in filelisting:   \n",
+    "    for file in files:\n",
+    "        email = \"not available\" #reset\n",
+    "        pmid = \"not available\" #reset\n",
+    "        year = \"not available\" #reset\n",
+    "        doi = \"not available\" #reset\n",
+    "        \n",
+    "        kwds = [] #reset\n",
+    "        title = \"not available\" #reset\n",
+    "        tree = ET.parse(root + \"/\" + file)\n",
+    "        for node in tree.iter('email'):\n",
+    "            email = node.text\n",
+    "        for node in tree.iter('pub-date'):\n",
+    "            for subnode in node.iter('year'):\n",
+    "                collection = node.attrib\n",
+    "                #if \"collection\" in collection.values():\n",
+    "                if \"pub-type\" in collection.keys():\n",
+    "                    year = subnode.text\n",
+    "        #Get titles\n",
+    "        for node in tree.iter('title-group'):\n",
+    "            for subnode in node.iter('article-title'):\n",
+    "                title = subnode.text\n",
+    "                for subsubnode in node.iter('italic'):\n",
+    "                    italic = subsubnode.text \n",
+    "                    tail = subsubnode.tail \n",
+    "                    title += italic + tail  \n",
+    "        #Get PMC IDs\n",
+    "        for node in tree.iter('article-id'):\n",
+    "            pmidat = node.attrib\n",
+    "            if \"pmc\" in pmidat.values():\n",
+    "                pmid = node.text\n",
+    "            if \"doi\" in pmidat.values():\n",
+    "                doi = node.text        \n",
+    "        for node in tree.iter('kwd'):  \n",
+    "            kwd = node.text\n",
+    "            if kwd != None:\n",
+    "                kwds.append(json.dumps(kwd))  \n",
+    "        kwdstring = str(kwds)\n",
+    "        kwdstring = kwdstring.replace(\"'\", \"\")\n",
+    "        kwdstring = kwdstring.replace(\"\\\\\", \"\")\n",
+    "                \n",
+    "        for node in tree.iter():\n",
+    "            if node.text != None:\n",
+    "                node = node.text.split()\n",
+    "                for rsnumber in node:\n",
+    "                    if \"rs\" in rsnumber[1:3]:\n",
+    "                        rsnumber = rsnumber[1:] #include rs numbers starting with brackets\n",
+    "                    if rsnumber.isalnum() and len(rsnumber) > 4 and len(rsnumber) < 15: #ensure that digits follow rs\n",
+    "                        if rsnumber.startswith(\"rs\") and rsnumber[2].isdigit():\n",
+    "                            while not rsnumber[-1].isdigit():\n",
+    "                                rsnumber = rsnumber[:-1] #ensure that rs ends with digits\n",
+    "                            rslist.append(rsnumber.strip() + \"\\t\" + email.strip() + \"\\t\" + year.strip() + \\\n",
+    "                            \"\\t\" + pmid.strip() + \"\\t\" + doi.strip() + \"\\t\" + file.strip() + \"\\t\" + str(kwdstring) + \"\\t\" + title.strip())\n",
+    "rsdict = {}\n",
+    "for item in rslist:\n",
+    "    if rsdict.get(item,\"empty\") == \"empty\":\n",
+    "        rsdict.update({item:1})\n",
+    "    if rsdict.get(item,\"empty\") != \"empty\":\n",
+    "        rsdict[item] += 1\n",
+    "rslist = []\n",
+    "writetofile = open(\"/home/werner/Desktop/TEXTdb.csv\", \"a\")\n",
+    "for item in rsdict.keys():\n",
+    "    writetofile.write(item + \"\\t\" + str(rsdict[item]) + \"\\n\") #Fix linebreaks here!!!!\n",
+    "writetofile.close()"
    ]
   },
   {
