Removed Google user ID tracking code, added article to test set, and created new script for article title extraction

--- a/SNiPhunter_Scripts.ipynb
+++ b/SNiPhunter_Scripts.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +70,7 @@
     "        else:\n",
     "            t += ch\n",
     "    return \"\".join(ch for ch in t if unicodedata.category(ch)[0]!=\"C\")\n",
-    "directory = \"/home/werner/Desktop/Destination/\"\n",
+    "directory = \"/home/werner/Desktop/TestArticles/\"\n",
     "filelisting = os.walk(directory)\n",
     "rslist =[]\n",
     "for root, dirs, files in filelisting:   \n",
@@ -80,7 +80,7 @@
     "        year = \"not available\" #reset\n",
     "        doi = \"not available\" #reset       \n",
     "        kwds = [] #reset\n",
-    "        title = \"not available\" #reset\n",
+    "        title = \"\" #reset\n",
     "        tree = ET.parse(root + \"/\" + file)\n",
     "        for node in tree.iter('email'):\n",
     "            email = node.text\n",
@@ -93,16 +93,10 @@
     "        #Get titles\n",
     "        for node in tree.iter('title-group'):\n",
     "            for subnode in node.iter('article-title'):\n",
-    "                try:\n",
-    "                    title = remove_control_characters(subnode.text)\n",
-    "                    for subsubnode in node.iter('italic'):\n",
-    "                        italic = subsubnode.text \n",
-    "                        tail = remove_control_characters(subsubnode.tail)\n",
-    "                        title += italic + tail  \n",
-    "                        title = str(title)\n",
-    "                except:\n",
-    "                    continue\n",
-    "                \n",
+    "                whole = subnode.itertext()\n",
+    "                for parts in whole:\n",
+    "                    title += parts\n",
+    "        #print(remove_control_characters(title))                \n",
     "        #Get PMC IDs\n",
     "        for node in tree.iter('article-id'):\n",
     "            pmidat = node.attrib\n",
