--- a/SNiPhunter_Scripts.ipynb
+++ b/SNiPhunter_Scripts.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +70,7 @@
     "        else:\n",
     "            t += ch\n",
     "    return \"\".join(ch for ch in t if unicodedata.category(ch)[0]!=\"C\")\n",
-    "directory = \"/home/werner/Desktop/TestArticles/\"\n",
+    "directory = \"/home/werner/Desktop/Destination/\"\n",
     "filelisting = os.walk(directory)\n",
     "rslist =[]\n",
     "for root, dirs, files in filelisting:   \n",
@@ -96,7 +96,7 @@
     "                whole = subnode.itertext()\n",
     "                for parts in whole:\n",
     "                    title += parts\n",
-    "        #print(remove_control_characters(title))                \n",
+    "        title = remove_control_characters(title)                \n",
     "        #Get PMC IDs\n",
     "        for node in tree.iter('article-id'):\n",
     "            pmidat = node.attrib\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -184,7 +184,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "111775\n"
+      "111778\n"
      ]
     }
    ],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -212,7 +212,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8742\n"
+      "8743\n"
      ]
     }
    ],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -248,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "69569\n"
+      "69463\n"
      ]
     }
    ],
@@ -260,7 +260,7 @@
     "with open(\"/home/werner/Desktop/JSONdbKeys.json\") as data_file:    \n",
     "    data = json.load(data_file)\n",
     "    for i in range(len(data[\"PMCOAI_rs_articles\"])):\n",
-    "        if len(data[\"PMCOAI_rs_articles\"][i][\"rs_number\"]) > 3 and data[\"PMCOAI_rs_articles\"][i][\"rs_number\"][2:].isdigit():\n",
+    "        if len(data[\"PMCOAI_rs_articles\"][i][\"rs_number\"]) > 5 and data[\"PMCOAI_rs_articles\"][i][\"rs_number\"][2:].isdigit():\n",
     "            keywordList.append(data[\"PMCOAI_rs_articles\"][i][\"rs_number\"])\n",
     "    keywordList = set(keywordList)\n",
     "    keywordList = sorted(keywordList)\n",
