New API page with examples using highlight.js

--- a/SNiPhunter_Scripts.ipynb
+++ b/SNiPhunter_Scripts.ipynb
@@ -271,6 +271,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.1371/journal.pone.0081071\n",
+      "10.1186/1475-2875-10-250\n",
+      "10.1371/journal.pone.0139711\n",
+      "10.1186/1710-1492-9-10\n",
+      "10.2147/TACG.S8380\n",
+      "10.1038/gene.2013.34\n",
+      "10.3389/fgene.2015.00278\n",
+      "10.1186/s12881-015-0166-1\n",
+      "10.1038/gene.2010.14\n",
+      "10.1186/ar2589\n",
+      "10.2147/CMAR.S28683\n",
+      "10.3390/cancers2021198\n",
+      "10.1371/journal.pone.0047597\n",
+      "10.1371/journal.pone.0043987\n",
+      "10.1038/gene.2014.54\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Return a list containing each object's DOI (using Python 3) if the object contains reference SNP ID rs5743810\n",
+    "\n",
+    "import httplib2\n",
+    "import json\n",
+    "import pprint\n",
+    "h = httplib2.Http()\n",
+    "resp, content = h.request(\"http://sniphunter.sanbi.ac.za/PMCOAI_rs_articles?rs_number=rs5743810\")\n",
+    "assert resp.status == 200\n",
+    "result = content.decode(\"utf-8\")\n",
+    "inJSON = json.loads(result)\n",
+    "for dictionary in inJSON:\n",
+    "    for key, value in dictionary.items():\n",
+    "        if key == \"doi\":\n",
+    "            print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
