Added node dependency script and python comments

--- a/SNiPhunter_Scripts.ipynb
+++ b/SNiPhunter_Scripts.ipynb
@@ -16,9 +16,7 @@
     }
    ],
    "source": [
-    "#Extracting \"rs\" containing XML files from Pubmed OAI set\n",
-    "#Copies files containing valid \"rs\" terms from source to destination directory\n",
-    "#Counters keep track of scanned vs copied files\n",
+    "#Copies files containing potentially valid \"rs\" terms from source to destination directory\n",
     "import os\n",
     "import shutil\n",
     "directory = \"/home/werner/Desktop/Source/articles.O-Z/\" #source directory\n",
@@ -37,14 +35,14 @@
     "            if breakTest == 1:\n",
     "                break\n",
     "            for word in line1:\n",
-    "                if (word.startswith('rs') or (not word[0].isalnum() and \"rs\" in word[1:3])): # search clause\n",
+    "                if (word.startswith('rs') or (not word[0].isalnum() and \"rs\" in word[1:3])): #search clause\n",
     "                    shutil.copy(os.path.join(root,file), \"/home/werner/Desktop/Destination/\" + file) #destination directory\n",
     "                    breakTest = 1\n",
     "                    rsFiles += 1\n",
     "                if breakTest == 1:\n",
     "                    break\n",
     "        fileOne.close()\n",
-    "print (totalFiles, rsFiles)"
+    "print (totalFiles, rsFiles) #print ratio of files scanned to files containing rsSNPs"
    ]
   },
   {
@@ -75,15 +73,17 @@
     "rslist =[]\n",
     "for root, dirs, files in filelisting:   \n",
     "    for file in files:\n",
-    "        email = \"not available\" #reset\n",
-    "        pmid = \"not available\" #reset\n",
-    "        year = \"not available\" #reset\n",
-    "        doi = \"not available\" #reset       \n",
-    "        kwds = [] #reset\n",
-    "        title = \"\" #reset\n",
+    "        email = \"not available\" #iteration reset\n",
+    "        pmid = \"not available\" #iteration reset\n",
+    "        year = \"not available\" #iteration reset\n",
+    "        doi = \"not available\" #iteration reset      \n",
+    "        kwds = [] #iteration reset\n",
+    "        title = \"\" #iteration reset\n",
     "        tree = ET.parse(root + \"/\" + file)\n",
+    "        #Get email addresses\n",
     "        for node in tree.iter('email'):\n",
     "            email = node.text\n",
+    "        #Get publication date\n",
     "        for node in tree.iter('pub-date'):\n",
     "            for subnode in node.iter('year'):\n",
     "                collection = node.attrib\n",
@@ -103,7 +103,8 @@
     "            if \"pmc\" in pmidat.values():\n",
     "                pmid = node.text\n",
     "            if \"doi\" in pmidat.values():\n",
-    "                doi = node.text        \n",
+    "                doi = node.text   \n",
+    "        #Get author defined keywords\n",
     "        for node in tree.iter('kwd'):  \n",
     "            kwd = node.text\n",
     "            if kwd != None:\n",
@@ -111,26 +112,35 @@
     "        kwdstring = str(kwds)\n",
     "        kwdstring = kwdstring.replace(\"'\", \"\")\n",
     "        kwdstring = kwdstring.replace(\"\\\\\", \"\")\n",
-    "                \n",
+    "        #Get rs numbers\n",
     "        for node in tree.iter():\n",
     "            if node.text != None:\n",
     "                node = node.text.split()\n",
     "                for rsnumber in node:\n",
+    "                    #trim rs numbers preceded by opening bracket\n",
     "                    if \"rs\" in rsnumber[1:3]:\n",
-    "                        rsnumber = rsnumber[1:] #include rs numbers starting with brackets\n",
-    "                    if rsnumber.isalnum() and len(rsnumber) > 4 and len(rsnumber) < 15: #ensure that digits follow rs\n",
+    "                        rsnumber = rsnumber[1:]\n",
+    "                    #ensure that digits follow rs numbers and place limits on rs number length\n",
+    "                    if rsnumber.isalnum() and len(rsnumber) > 4 and len(rsnumber) <= 12: \n",
+    "                        #ensure that digits follow rs\n",
     "                        if rsnumber.startswith(\"rs\") and rsnumber[2].isdigit():\n",
+    "                            #ensure that rs numbers end with digits\n",
     "                            while not rsnumber[-1].isdigit():\n",
-    "                                rsnumber = rsnumber[:-1] #ensure that rs ends with digits\n",
+    "                                rsnumber = rsnumber[:-1] \n",
+    "                            #create list item without white spaces\n",
     "                            rslist.append(rsnumber.strip() + \"\\t\" + email.strip() + \"\\t\" + year.strip() + \\\n",
     "                            \"\\t\" + pmid.strip() + \"\\t\" + doi.strip() + \"\\t\" + file.strip() + \"\\t\" + str(kwdstring) + \"\\t\" + str(title))\n",
+    "#create rsSNP occurence counter (with dictionary) to avoid data duplication\n",
     "rsdict = {}\n",
     "for item in rslist:\n",
+    "    #add data if counter is zero\n",
     "    if rsdict.get(item,\"empty\") == \"empty\":\n",
     "        rsdict.update({item:1})\n",
+    "    #increment counter if data was added\n",
     "    if rsdict.get(item,\"empty\") != \"empty\":\n",
     "        rsdict[item] += 1\n",
     "rslist = []\n",
+    "#create tab delimited CSV file and add data\n",
     "writetofile = open(\"/home/werner/Desktop/TEXTdb.csv\", \"a\")\n",
     "for item in rsdict.keys():\n",
     "    writetofile.write(item + \"\\t\" + str(rsdict[item]) + \"\\n\")\n",
@@ -145,7 +155,7 @@
    },
    "outputs": [],
    "source": [
-    "#Convert database to JSON\n",
+    "#Convert tab delimited CSV file to JSON\n",
     "import json\n",
     "file = open(\"/home/werner/Desktop/TEXTdb.csv\", \"r\")\n",
     "preJSONlist = []\n",
@@ -166,39 +176,11 @@
     "        \", \" + doi + \", \" + pubmed_file_name + \", \" + rs_number_cited_in_article + \", \" + article_title + \", \" + keywords + \"}\"\n",
     "        JSONstring += newdictionary + \", \"\n",
     "file.close()\n",
+    "#save JSON data and ensure last entry is enclosed in brackets\n",
     "with open(\"/home/werner/Desktop/JSONdbKeys.json\", \"w\") as file1:\n",
     "    JSONstring = JSONstring[:-2]\n",
     "    JSONstring += \"]}\"\n",
     "    file1.write(JSONstring)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "111778\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Test JSON\n",
-    "import json\n",
-    "from pprint import pprint\n",
-    "counter = 0\n",
-    "with open(\"/home/werner/Desktop/JSONdbKeys.json\") as data_file:    \n",
-    "    data = json.load(data_file)\n",
-    "    for objs in data:\n",
-    "        counter += 1\n",
-    "z = list(data.values())\n",
-    "pprint(len(z[0]))"
    ]
   },
   {
@@ -217,7 +199,7 @@
     }
    ],
    "source": [
-    "#Get keywords\n",
+    "#Count keywords in database\n",
     "import json\n",
     "from pprint import pprint\n",
     "keywordList = []\n",
@@ -253,7 +235,7 @@
     }
    ],
    "source": [
-    "#Get rs numbers\n",
+    "#Count rs numbers in database\n",
     "import json\n",
     "from pprint import pprint\n",
     "keywordList = []\n",
@@ -300,13 +282,14 @@
    ],
    "source": [
     "#Return a list containing each object's DOI (using Python 3) if the object contains reference SNP ID rs5743810\n",
-    "\n",
+    "#Published on web page as example for API usage \n",
     "import httplib2\n",
     "import json\n",
     "h = httplib2.Http()\n",
     "resp, content = h.request(\"http://sniphunter.sanbi.ac.za/PMCOAI_rs_articles?rs_number=rs5743810\")\n",
     "assert resp.status == 200\n",
-    "result = content.decode(\"utf-8\")\n",
+    "#convert binary object to JSON object\n",
+    "result = content.decode(\"utf-8\") \n",
     "inJSON = json.loads(result)\n",
     "for dictionary in inJSON:\n",
     "    for key, value in dictionary.items():\n",
@@ -340,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
